# sim-plugin-matlab

./: .gitignore  CHANGELOG.md  LICENSE-NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
fixtures/: matlab_ok.m  mock_solver.py  not_simulation.py
src/sim_plugin_matlab/: __init__.py  compatibility.yaml  driver.py
src/sim_plugin_matlab/_skills/matlab/: SKILL.md
src/sim_plugin_matlab/_skills/matlab/base/: driver_upgrade.md
src/sim_plugin_matlab/_skills/matlab/base/reference/: README.md  simulink.md
src/sim_plugin_matlab/_skills/matlab/base/snippets/: README.md
src/sim_plugin_matlab/_skills/matlab/base/workflows/: README.md
src/sim_plugin_matlab/_skills/matlab/sdk/23.2/: notes.md
src/sim_plugin_matlab/_skills/matlab/sdk/24.1/: notes.md
src/sim_plugin_matlab/_skills/matlab/sdk/24.2/: notes.md
src/sim_plugin_matlab/_skills/matlab/tests/: README.md
src/sim_plugin_matlab/matlab_pkg/+sim_shim/: run.m
tests/: test_matlab_driver.py  test_protocol.py  test_real_matlab_smoke.py  test_skill_contract.py  test_wheel_contents.py
