[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-plugin-matlab"
version = "0.1.0"
description = "MATLAB and Simulink driver for sim-cli, distributed as a plugin"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Weiqi Ji", email = "jiweiqi10@gmail.com" }]
keywords = ["matlab", "simulink", "cae", "simulation", "sim-cli", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "sim-cli-core>=0.3",
]

[project.optional-dependencies]
engine = [
    # matlabengine is rigidly coupled to the MATLAB binary version (24.1 only
    # talks to R2024a, etc.) and MathWorks does not provide a meta-package that
    # resolves the right pin automatically. Leave it unpinned here; users or
    # `sim env install matlab` choose the SDK that matches the MATLAB release
    # they actually have. See compatibility.yaml for the mapping.
    "matlabengine",
]
test = [
    "pytest>=7",
    "build>=1.0",
]

[project.entry-points."sim.drivers"]
matlab = "sim_plugin_matlab:MatlabDriver"

[project.entry-points."sim.skills"]
matlab = "sim_plugin_matlab:skills_dir"

[project.entry-points."sim.plugins"]
matlab = "sim_plugin_matlab:plugin_info"

[project.urls]
Homepage = "https://github.com/svd-ai-lab/sim-plugin-matlab"
Repository = "https://github.com/svd-ai-lab/sim-plugin-matlab"
Issues = "https://github.com/svd-ai-lab/sim-plugin-matlab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sim_plugin_matlab"]
# Ship the MATLAB +sim_shim package (.m files) and compatibility.yaml as
# package data — hatchling's default include rules cover them when they
# live under the package dir, but be explicit to defend against future
# regressions.
include = ["src/sim_plugin_matlab/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that build wheels or touch external tooling",
]
